# vault

./: .gitignore  .mocharc.json  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: CODEOWNERS  backup_vault_manager.ts  brl_backup.yml  cron_backup_vault.yml  manual_vault_clean_deploy.yml  save_vault_wasm.ts  synchronise_vault_repo.ts  test.yml  vault_self.yml  vault_test_deploy.yml
.github/workflows/idl/: idl.js  idl.ts  service.ts
src/libraries/nfid_certified/: Cargo.toml
src/libraries/nfid_certified/src/: cert_trusted.rs  lib.rs
src/vault/: Cargo.toml  build.sh  vault.did  vault.old.did
src/vault/src/: config.rs  enums.rs  errors.rs  lib.rs  memory.rs  policy_service.rs  request.rs  security_service.rs  state.rs  transaction_service.rs  transfer_service.rs  user_service.rs  util.rs  vault_service.rs  version_const.rs  wallet_service.rs
src/vault/src/transaction/: basic_transaction.rs  member_transaction.rs  members.rs  mod.rs  quorum.rs  quorum_transaction.rs  transaction.rs  transaction_approve_handler.rs  transaction_builder.rs  transaction_request_handler.rs  transaction_service.rs  transactions_service.rs
src/vault/src/transaction/member/: member_archive_transaction.rs  member_create_transaction.rs  member_create_transaction_v2.rs  member_extend_account_transaction.rs  member_remove_transaction.rs  member_unarchive_transaction.rs  member_update_name_transaction.rs  member_update_role_transaction.rs  members.rs  mod.rs
src/vault/src/transaction/nns/: ecdsa.rs  mod.rs  stake_neuron.rs  types.rs
src/vault/src/transaction/policy/: mod.rs  policy.rs  policy_create_transaction.rs  policy_remove_transaction.rs  policy_update_transaction.rs
src/vault/src/transaction/purge/: mod.rs  purge_transaction.rs
src/vault/src/transaction/quorum/: mod.rs  quorum.rs  quorum_transaction.rs
src/vault/src/transaction/transfer/: mod.rs  top_up_quorum_transaction.rs  top_up_transaction.rs  transfer_common.rs  transfer_executor_common.rs  transfer_icrc1_quorum_transaction.rs  transfer_quorum_transaction.rs  transfer_transaction.rs
src/vault/src/transaction/upgrade/: mod.rs  upgrade_transaction.rs
src/vault/src/transaction/vault/: add_icrc1_canisters_transaction.rs  controllers_transaction.rs  mod.rs  quorum.rs  quorum_transaction.rs  remove_icrc1_canisters_transaction.rs  vault_naming_transaction.rs
src/vault/src/transaction/wallet/: mod.rs  wallet.rs  wallet_create_transaction.rs  wallet_create_transaction_V2.rs  wallet_update_name_transaction.rs  wallet_update_transaction.rs
src/vault_manager/: Cargo.toml  build.sh  vault_manager.did
src/vault_manager/src/: config.rs  lib.rs  vault.wasm
src/vault_repo/: Cargo.toml  build.sh  vault_repo.did
src/vault_repo/src/: lib.rs
test/constanst/: app.enum.ts  dfx.const.ts
test/idl/: vault.ts  vault_idl.ts
test/resource/: ledger.sh  vault.sh  vault_manager.sh
test/type/: dfx.ts
test/util/: call.util.ts  deployment.util.ts
test/vault/: 1.test.ts  approve_handler.test.ts  barch_transaction.test.ts  batch_transaction.test.ts  bigintextension.js  controllers_transactions.test.ts  helper.ts  member_transactions.test.ts  policy.test.ts  policy_transactions.test.ts  purge_transactions.test.ts  quorum_transactions.test.ts  security.test.ts  state_manager.test.ts  top_up_transaction.test.ts  transaction.test.ts  transafer_transaction.test.ts  transfer_transaction.test.ts  upgrade_transactions.test.ts  vault.test.ts  vault_naming_transactions.test.ts  wallet.test.ts  wallet_transactions.test.ts
test/vault_manager/: vault_manager.test.ts
test/vault_repo/: vault_001.wasm  vault_002.wasm  vault_003.wasm  vault_repo.test.ts
(+14 files in other folders)
