[package]
name = "vault"
version = "0.1.0"
edition = "2018"

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[build-dependencies]
candid = "0.7.4"

[dependencies]
bytemuck = "1.12.3"
candid = "0.8"
ic-cdk = "0.6"
ic-cdk-macros = "0.6"
ic-ledger-types = "0.2.0"
serde = "1"
byteorder = "1.4.3"
ic-certified-map = "0.3"
ic-stable-structures = "0.1.2"
hex = "0.4.3"
sha2 = "0.9.8"
crc32fast = "1.2.0"
serde_bytes = "0.11"
maplit = "1.0.2"
serde_json = "1.0.82"
[dev-dependencies]
tempfile = "3.2.0"