[package]
name = "vault_repo"
version = "0.1.0"
edition = "2018"

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[build-dependencies]
candid = "0.9.9"

[dependencies]
ic-kit = "0.4.8"
bytemuck = "1.12.3"
candid = "0.9.9"
ic-cdk = "0.11.2"
ic-cdk-macros = "0.8.1"
ic-ledger-types = "0.8.0"
serde = "1"
byteorder = "1.4.3"
ic-certified-map = "0.4.0"
ic-stable-structures = "0.6.0"
hex = "0.4.3"
sha2 = "0.10.8"
crc32fast = "1.2.0"
serde_bytes = "0.11"
maplit = "1.0.2"
serde_json = "1.0.82"
lazy_static = "1.4"
semver="1.0.20"
nfid_certified= { path = "../libraries/nfid_certified" }

[dev-dependencies]
tempfile = "3.2.0"