[package]
name = "nfid_certified"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10.3"
ic-cdk = "0.12.1"
ic-cdk-macros = "0.8.1"
ic-ledger-types = "0.9.0"
serde = "1"
byteorder = "1.5.0"
ic-certified-map = "0.4.0"
ic-stable-structures = "0.6.0"
sha2 = "0.10.8"
anyhow = "1.0.71"
serde_cbor = "0.11.2"
sha256 = "1.1.1"
hex = "0.4.3"